--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
+mangum==0.17.0
 
 # Data processing
 numpy==1.24.3
-
-# Optional: for production deployment
-# gunicorn==21.2.0
